# trading-algo-api

./: pyproject.toml
